--- a/styles/globals.css
+++ b/styles/globals.css
@@ -626,20 +626,20 @@ margin-top: 160px;
     height: 560px;
   }
   .hero-banner-image{
-    width: 77%;
-    height: 62%;
-    top: -2%;
-    right: -6%;
+    width: 55%;
+    height: 22%;
+    top: 50%;
+    right: 4%;
   }
   .footer-banner-container{
     height: 560px;
     margin-top: 80px;
   }
   .footer-banner-image{
-    width: 77%;
-    left: 30%;
-    top: 6%;
-    height: 56%
+    width: 55%;
+    left: 7%;
+    top: 5%;
+    height: 22%
   }
   .banner-desc .left h3{
     font-weight: 900;
@@ -662,6 +662,12 @@ margin-top: 160px;
     flex-wrap: wrap;
     gap: 20px;
   }
+
+  .banner-desc button{
+    width: 300px;
+    margin-top: 15px;
+  }
+
   .hero-banner-container{
     line-height: 1.3;
   }
